--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,20 @@
 [versions]
 # Define the dependency versions
-kotlin = "1.7.20"
-compose = "1.3.1"
-runtime_compose = "1.3.3"
-material = "1.7.0"
-material3 = "1.1.0-alpha02"
+core-testing = "2.2.0"
+gradle = "8.1.0-alpha06"
+kotlin = "1.8.0"
+compose = "1.4.3"
+compose-ui = "1.3.3"
+compose-material = "1.3.1"
+compose-material3 = "1.0.1"
+compose_runtime = "1.3.3"
+kotlin-gradle-plugin = "1.8.10"
+mockito-core = "5.0.0"
+material = "1.8.0"
 maps_compose = "1.0.0"
 gms_maps = "18.1.0"
 activity_compose = "1.6.1"
-appcompat = "1.5.1"
+appcompat = "1.6.1"
 constraintlayout = "2.1.4"
 lifecycle = "2.5.1"
 junit = "4.13.2"
@@ -20,31 +26,38 @@ dagger_android = "2.35.1"
 dagger_android_processor = "2.10"
 fragment = "1.5.5"
 navigation = "2.5.3"
-core = "1.7.0"
-room = "2.4.2"
+core = "1.9.0"
+room = "2.5.0"
 coil = "2.2.2"
-savedstate = "1.1.0"
+savedstate = "1.2.0"
+paging = "3.1.1"
+paging-compose = "1.0.0-alpha18"
 
 [libraries]
 # Define the libraries
 android_core_ktx = { module = "androidx.core:core-ktx", version.ref = "core" }
 
-compose_ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
-compose_material = { module = "androidx.compose.material:material", version.ref = "compose" }
-compose_material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
-compose_tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
-compose_tooling_preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
-compose_test_manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
-compose_test_junit = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
-compose_icons = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
+compose_ui = { module = "androidx.compose.ui:ui", version.ref = "compose-ui" }
+compose_material = { module = "androidx.compose.material:material", version.ref = "compose-material" }
+compose_material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
+compose_tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose-ui" }
+compose_tooling_preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose-ui" }
+compose_test_manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose-ui" }
+compose_test_junit = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose-ui" }
+compose_icons = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose-material" }
 compose_maps = { module = "com.google.maps.android:maps-compose", version.ref = "maps_compose" }
 compose_activity = { module = "androidx.activity:activity-compose", version.ref = "activity_compose" }
-compose_runtime_livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "runtime_compose" }
+compose_runtime_livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "compose_runtime" }
+compose_runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose_runtime" }
+compose_compiler = { module = "androidx.compose.compiler:compiler", version.ref = "compose" }
 
+core-testing = { module = "androidx.arch.core:core-testing", version.ref = "core-testing" }
 gms_maps = { module = "com.google.android.gms:play-services-maps", version.ref = "gms_maps" }
 
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 
+gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
+kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin-gradle-plugin" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
 lifecycle = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
@@ -53,6 +66,7 @@ junit = { module = "junit:junit", version.ref = "junit" }
 
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito-core" }
 retrofit_retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit_converter_gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 
@@ -78,6 +92,9 @@ room_compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 coil_compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 
 savedstate_ktx = { module = "androidx.savedstate:savedstate-ktx", version.ref = "savedstate" }
+
+paging = { module = "androidx.paging:paging-runtime", version.ref = "paging" }
+paging_compose = { module = "androidx.paging:paging-compose", version.ref = "paging-compose" }
 
 [bundles]
 # Define bundles/groups of libraries
