--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,42 +1,49 @@
 [versions]
 # Define the dependency versions
 core-testing = "2.2.0"
-gradle = "8.1.0-alpha06"
+gradle = "8.1.0"
 kotlin = "1.8.0"
-compose = "1.4.3"
-compose-ui = "1.3.3"
-compose-material = "1.3.1"
-compose-material3 = "1.0.1"
-compose_runtime = "1.3.3"
+compose-bom = "2023.08.00"
+compose = "1.5.1"
+compose-ui = "1.5.0"
+compose-material = "1.5.0"
+compose-material3 = "1.1.1"
+compose_runtime = "1.5.0"
 kotlin-gradle-plugin = "1.8.10"
 mockito-core = "5.0.0"
-material = "1.8.0"
+material = "1.9.0"
 maps_compose = "1.0.0"
 gms_maps = "18.1.0"
-activity_compose = "1.6.1"
+activity_compose = "1.7.2"
 appcompat = "1.6.1"
+android-desugar = "2.0.3"
 constraintlayout = "2.1.4"
-lifecycle = "2.5.1"
+lifecycle = "2.6.1"
 junit = "4.13.2"
 gson = "2.9.0"
 retrofit = "2.9.0"
 okhttp3 = "4.10.0"
-dagger = "2.43.2"
+dagger = "2.44.2"
 dagger_android = "2.35.1"
 dagger_android_processor = "2.10"
-fragment = "1.5.5"
-navigation = "2.5.3"
-core = "1.9.0"
-room = "2.5.0"
+fragment = "1.6.1"
+navigation = "2.7.0"
+core = "1.10.1"
+room = "2.5.2"
 coil = "2.2.2"
-savedstate = "1.2.0"
-paging = "3.1.1"
-paging-compose = "1.0.0-alpha18"
+savedstate = "1.2.1"
+paging = "3.2.0"
+paging-compose = "3.2.0"
+mvikotlin = "3.2.1"
+immutable-collections = "0.3.5"
+decompose = "2.0.1"
 
 [libraries]
 # Define the libraries
 android_core_ktx = { module = "androidx.core:core-ktx", version.ref = "core" }
+android-desugar = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "android-desugar" }
 
+compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 compose_ui = { module = "androidx.compose.ui:ui", version.ref = "compose-ui" }
 compose_material = { module = "androidx.compose.material:material", version.ref = "compose-material" }
 compose_material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
@@ -61,6 +68,7 @@ kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", v
 material = { module = "com.google.android.material:material", version.ref = "material" }
 constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
 lifecycle = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
+kotlinx-immutable-collections = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm", version.ref = "immutable-collections" }
 
 junit = { module = "junit:junit", version.ref = "junit" }
 
@@ -95,6 +103,15 @@ savedstate_ktx = { module = "androidx.savedstate:savedstate-ktx", version.ref = 
 
 paging = { module = "androidx.paging:paging-runtime", version.ref = "paging" }
 paging_compose = { module = "androidx.paging:paging-compose", version.ref = "paging-compose" }
+
+mvikotlin_core = { module = "com.arkivanov.mvikotlin:mvikotlin", version.ref = "mvikotlin" }
+mvikotlin_main = { module = "com.arkivanov.mvikotlin:mvikotlin-main", version.ref = "mvikotlin" }
+mvikotlin_logging = { module = "com.arkivanov.mvikotlin:mvikotlin-logging", version.ref = "mvikotlin" }
+mvikotlin_coroutines = { module = "com.arkivanov.mvikotlin:mvikotlin-extensions-coroutines", version.ref = "mvikotlin" }
+
+decompose_core = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
+decompose_compose_jetpack = { module = "com.arkivanov.decompose:extensions-compose-jetpack", version.ref = "decompose" }
+decompose_compose_jetbrains = { module = "com.arkivanov.decompose:extensions-compose-jetbrains", version.ref = "decompose" }
 
 [bundles]
 # Define bundles/groups of libraries
